--- a/code/backend/.env
+++ b/code/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URL = 
+MONGO_URL = mongodb+srv://thakshilanj:12345@cluster0.abaaan1.mongodb.net/essaymark?retryWrites=true&w=majority
 
 PASS_SEC = essay_marker
 
